[gd_scene load_steps=2 format=3 uid="uid://bvnwjpd0f3oa0"]

[ext_resource type="Script" path="res://scripts/multiplayer/multiplayer.gd" id="1_eutfa"]

[node name="Multiplayer" type="Node"]
script = ExtResource("1_eutfa")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://level.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="UI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Net" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -68.0
offset_right = 75.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Name" type="LineEdit" parent="UI/Net"]
layout_mode = 2
placeholder_text = "Name"
max_length = 16
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Net"]
layout_mode = 2

[node name="Host" type="Button" parent="UI/Net/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="VSeparator" type="VSeparator" parent="UI/Net/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Net/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Remote" type="LineEdit" parent="UI/Net/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Remote Host"
caret_blink = true
caret_blink_interval = 0.5

[node name="Connect" type="Button" parent="UI/Net/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Quit2" type="Button" parent="UI/Net"]
layout_mode = 2
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="DarkFilter" type="ColorRect" parent="UI/CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="Pause" type="VBoxContainer" parent="UI/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="UI/CanvasLayer/Pause"]
layout_mode = 2
text = "Resume"

[node name="Back" type="Button" parent="UI/CanvasLayer/Pause"]
layout_mode = 2
text = "Back"

[node name="Quit" type="Button" parent="UI/CanvasLayer/Pause"]
layout_mode = 2
text = "Quit"

[node name="PlayerList" type="VBoxContainer" parent="UI/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Stack" type="VBoxContainer" parent="UI/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_right = 40.0
grow_vertical = 0

[connection signal="pressed" from="UI/Net/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Net/HBoxContainer/VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="UI/Net/Quit2" to="." method="_on_quit_2_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Pause/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Pause/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Pause/Quit" to="." method="_on_quit_pressed"]
